# quickdesk

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001628cc2261_create_users_table.py  1ca61e887fe0_create_tickets_and_audit_logs_tables.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: auth.py  deps.py  metrics.py  tickets.py  ws.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  models.py
backend/app/models/: __init__.py  audit_log.py  ticket.py  user.py
backend/app/schemas/: __init__.py  audit_log.py  metrics.py  ticket.py  user.py
backend/app/services/: ai_service.py  auth_service.py  metrics_service.py  rag_service.py  ticket_service.py  websocket_service.py
backend/knowledge_base/: expense_reimbursement.md  laptop_request.md  leave_application.md  password_reset.md  vpn_setup.md  wifi_access.md
backend/tests/: conftest.py  test_critical_paths.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AddUserModal.jsx  DashboardLayout.jsx  EditUserModal.jsx  EmployeeTicketDetailsModal.jsx  MetricsDashboard.jsx  ProtectedRoute.jsx  TicketDetailsModal.jsx  TicketFilterBar.jsx  TicketQueueTable.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: AdminDashboard.jsx  AgentDashboard.jsx  EmployeeDashboard.jsx  Login.jsx  (+2 more)
(+1 files in other folders)
