[project]
name = "quickdesk-backend"
version = "0.1.0"
description = "QuickDesk AI-Assisted Helpdesk - Backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.115.0",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-nvidia-ai-endpoints>=1.4.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
